--- a/style.css
+++ b/style.css
@@ -1,32 +1,43 @@
 body{
-    /* min-height: 100vh; */
-    font-family: 'Roboto Slab', serif;;
+    font-family: 'Roboto Slab', serif;
+    height: 100vh;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
     /* justify-content: space-between; */
+    /* align-items: center; */
+    /* background-color: #1f2937; */
 }
 
 nav, header, footer{
     background-color: #1f2937;
     color: white;
+    /* height: 2rem; */
 }
+header, section{
+    flex: 1;
+}
+
 /* Navigation---------------------------------- */
 nav.row{
+    /* background: red; */
+    /* height: 2rem; */
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 50px;
 }
 .links{
-    width: 700px;
-    /* background-color: red; */
+    width: 500px;
+    height: 1rem;
     display: flex;
     gap: 15px;
+    align-items: center;
 }
 .links.left{
     justify-content: flex-start;
+    /* margin: 5px 0;   */
 }
 .links.right{
     justify-content: flex-end;
@@ -34,11 +45,12 @@ nav.row{
 
 h3{
     color: #f9faf8;
-    font-size: 24px;
+    font-size: 1.5rem;
+    margin: 0;
 }
 a, li{
     color: #e5e7eb;
-    font-size: 18px;
+    font-size: 1.125rem;
     list-style-type: none;
     text-decoration: none;
 }
@@ -46,37 +58,39 @@ ul{
     padding: 0;
 }
 /* Header--------------------------------------- */
-header.row{
+header.header{
     display: flex;
     justify-content: center;
     align-items: center;
     gap: 50px;
-    height: 300px;
+    /* height: 250px; */
+    padding: 5px 0;
 }
 div.top{
     /* background-color: red; */
-    width: 700px;
+    width: 500px;
     height: 220px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    align-items: flex-start;
-    margin: 0;
+    /* align-items: flex-start; */
+    margin: 40px 0 40px 0;
 }
 
 h1{
-    font-size: 48px;
+    font-size: 3rem;
     font-weight: 600;
     color: #f9faf8;
     margin: 0;
 }
 
-p{
+p.header{
     font-size: 18px;
     color: #e5e7eb;
-    margin: 10px 0;
+    margin: 5px 0 10px 0;
 }
-button{
+
+div button{
     background-color: #3883f6;
     color: #f9faf8;
     font-size: 1.2rem;
@@ -86,15 +100,89 @@ button{
     border-radius: 5px;
     width: 120px;
     box-shadow: 0 5px 20px #142f57;
+    /* margin: 0; */
 }
-/* Quote-------------------------- */
-.quote{
-    background-color: #e5e7eb;
-    color: #1f2937;
-    font-size: 36px;
-    font-style: italic;
+/* Sections cards-----------------------*/
+section.cards{
+    text-align: center;
 }
 
-.sign-up{
+.card-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    height: 300px;
+    /* width: 50%; */
+    margin: 10px 0 80px 0;
+}
+
+h2{
+    font-size: 2.25rem;
+    margin: 30px 0 10px 0;
+}
+.content{
+    width: 150px;
+    height: 250px;
+}
+.card-img{
+    width: 140px;
+    height: 140px;
+    border: 5px solid #3883f6;
+    border-radius: 15px;
+}
+
+
+/* Quote-------------------------- */
+section.quote{
+    background-color: #e5e7eb;
+    color: #1f2937;
+    font-size: 1.75rem;
+    font-style: italic;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+blockquote{
+    /* background-color: red; */
+    width: 800px;
+    font-weight: 100;
+    margin: 80px 0 0 0;
+}
+cite{
+    margin-bottom: 80px;
+}
+
+/* Sign-up----------------------------- */
+section.sign-up{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+div.sign{
     background-color: #3883f6;
+    color: white;
+    width: 900px;
+    height: 100px;
+    margin: 80px 0 80px 0;
+    border: 5px solid #3883f6;
+    border-radius: 15px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+h4{
+    margin-bottom: 0;
+}
+
+section p{
+    margin-top: 0;
+}
+div.row button{
+    border: 1px solid white;
+    box-shadow: none;
+}
+/* Footer---------- */
+footer{
+    text-align: center;
 }
